--- a/Week_Second/be/TestAngular/src/main/resources/application.properties
+++ b/Week_Second/be/TestAngular/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database=MYSQL
 server.port=3471
 
 # Config database
-spring.datasource.url=jdbc:mysql://localhost:3306/School?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=utf8&connectionCollation=utf8_general_ci&useSSL=false&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/school?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&characterSetResults=utf8&connectionCollation=utf8_general_ci&useSSL=false&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -14,7 +14,7 @@ spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Config Hibernate properties
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 
