--- a/Week_Second/fe/TestAngular/package.json
+++ b/Week_Second/fe/TestAngular/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
