--- a/Week_Second/fe/TestAngular/package.json
+++ b/Week_Second/fe/TestAngular/package.json
@@ -21,11 +21,19 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.4",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ng-icons/bootstrap-icons": "^28.1.0",
+    "@ng-icons/core": "^28.1.0",
+    "@ng-icons/feather-icons": "^28.1.0",
+    "@ng-icons/heroicons": "^28.1.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "ngx-bootstrap-icons": "^1.9.3",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
